--- a/day2/style.css
+++ b/day2/style.css
@@ -81,9 +81,8 @@
     font-size: 16px;
 
 }
-
 .box3{
-    background-image: url("https://source.unsplash.com/1600x1000/?chinese_food");
+    background-image: url("https://source.unsplash.com/1600x1000/?noodles");
     background-size: cover;
     width: 800px;
     height: 300px;
@@ -106,4 +105,40 @@
     border-radius: 5px;
 }
 
+.box4{
+    width: 400px;
+    border: 1px solid lightgray;
+    margin: 50px auto;
+    border-radius: 14px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: relative;
+    text-align: center;
+}
+
+.box4a{
+    padding: 10px 30px;
+}
+
+.box4img{
+    position: relative;
+    width: 100%;
+    height: 100px;
+    background-size: cover;
+    border-radius: 14px 14px 0px 0px;
+}
+
+.head4{
+    color: black;
+    margin-top: 50px;
+}
+
+.box4img1{
+    position: absolute;
+    border: 5px solid white;
+    height: 35%;
+    top:35%;
+    left:50%;
+    border-radius: 50%;
+    transform: translate(-50%,-50%);
+}
 
